Regression: Single-Vertex Grease Pencil strokes not affected by Push and Grab sculpt tools #99248

Closed
opened 2022-06-28 19:26:40 +02:00 by Matthew Gafford · 11 comments

System Information
Operating system: Windows 10
Graphics card: RTX 3070 FE

Blender Version
Broken: 3.2.1 RC
Worked: 3.1

image.png

Short description of error
The sculpting tools Push and Grab do not affect GP strokes that have only one vertex.

Exact steps for others to reproduce the error
Create a single-vertex stroke in a GP object
Change to Sculpt Mode and select either Grab or Push Tool
The stroke will not be affected unless you Extrude (E) at least one more vertex from it.

**System Information** Operating system: Windows 10 Graphics card: RTX 3070 FE **Blender Version** Broken: 3.2.1 RC Worked: 3.1 ![image.png](https://archive.blender.org/developer/F13235013/image.png) **Short description of error** The sculpting tools Push and Grab do not affect GP strokes that have only one vertex. **Exact steps for others to reproduce the error** Create a single-vertex stroke in a GP object Change to Sculpt Mode and select either Grab or Push Tool The stroke will not be affected unless you Extrude (E) at least one more vertex from it.

Added subscriber: @AFoxInSpace

Added subscriber: @AFoxInSpace
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Pratik Borhade changed title from Single-Vertex Grease Pencil strokes not affected by Push and Grab sculpt tools to Regression: Single-Vertex Grease Pencil strokes not affected by Push and Grab sculpt tools 2022-06-29 07:44:13 +02:00
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @antoniov

Added subscriber: @antoniov
Member

Not bisected yet but I suspect d4e1458db3
or D14490 , is that a intentional change @antoniov ?

Not bisected yet but I suspect d4e1458db3 or [D14490](https://archive.blender.org/developer/D14490) , is that a intentional change @antoniov ?

Added subscriber: @HDMaster84

Added subscriber: @HDMaster84

@PratikPB2123 I do not think. Maybe @HDMaster84 can confirm if this is a limitation of the algorithm he implemented or is a bug.

@PratikPB2123 I do not think. Maybe @HDMaster84 can confirm if this is a limitation of the algorithm he implemented or is a bug.

Anyway, I will investigate myself the bug also.

Anyway, I will investigate myself the bug also.
Antonio Vazquez self-assigned this 2022-06-29 15:24:02 +02:00

This issue was referenced by 92d1fab5cf

This issue was referenced by 92d1fab5cf3e63b0522a43e5b605ca9927e58856

This issue was referenced by b708f45922

This issue was referenced by b708f459228a589bb0a127c81f12af4f939dd15c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99248
No description provided.