Fix T99248: GPencil Sculpt Grab/Push don't work with one point

There were two problems:

1) The checking of the collision was not working with one point only.
2) For one point, the masking was checked always and if the masking was not activated, the stroke was skipped.